fix(template): Hide dark mode switcher

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -53,3 +53,8 @@ thead th {
 .admonition.error {
   border-left-color: var(--xbol-error);
 }
+
+/* Hide theme switcher button(s) */
+button.myst-theme-button {
+  display: none !important;
+}
